@@ -39,10 +39,11 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Stream;
 
+import mekhq.campaign.mission.contract.AbstractContract;
 import mekhq.campaign.universe.Faction;
 import mekhq.campaign.universe.PlanetarySystem;
 import mekhq.campaign.universe.factionHints.FactionHints;
@@ -102,6 +103,36 @@ class FactionStandingUtilitiesTest {
     }
 
     @Test
+    void preparedAccessDataMatchesPlanetarySystemAndContractLookup() {
+        LocalDate when = LocalDate.of(3025, 1, 1);
+        Faction campaignFaction = mock(Faction.class);
+        Faction systemOwner = mock(Faction.class);
+        PlanetarySystem targetSystem = mock(PlanetarySystem.class);
+        FactionStandings factionStandings = mock(FactionStandings.class);
+        FactionHints factionHints = mock(FactionHints.class);
+        when(systemOwner.getShortName()).thenReturn("OWNER");
+        when(targetSystem.getPopulation(when)).thenReturn(1_000_000L);
+        when(targetSystem.getFactionSet(when)).thenReturn(Set.of(systemOwner));
+        when(factionStandings.getRegardForFaction("OWNER", true)).thenReturn(
+              FactionStandingLevel.STANDING_LEVEL_0.getMinimumRegard());
+
+        boolean directAccess = FactionStandingUtilities.canEnterTargetSystem(campaignFaction, factionStandings,
+              null, targetSystem, when, List.of(), factionHints);
+        boolean preparedAccess = FactionStandingUtilities.canEnterTargetSystem(campaignFaction, factionStandings,
+              null, 1_000_000L, Set.of(systemOwner), when, Set.of(), Set.of(), factionHints);
+        assertEquals(directAccess, preparedAccess);
+
+        AbstractContract contract = mock(AbstractContract.class);
+        when(contract.getEmployerFaction()).thenReturn(systemOwner);
+        directAccess = FactionStandingUtilities.canEnterTargetSystem(campaignFaction, factionStandings,
+              null, targetSystem, when, List.of(contract), factionHints);
+        preparedAccess = FactionStandingUtilities.canEnterTargetSystem(campaignFaction, factionStandings,
+              null, 1_000_000L, Set.of(systemOwner), when, Set.of(systemOwner), Set.of(), factionHints);
+        assertEquals(directAccess, preparedAccess);
+        assertTrue(preparedAccess);
+      }
+
+      @Test
     @DisplayName("An empty system (no population) is always enterable")
     void testCanEnterTargetSystem_emptySystem_grantsAccess() {
         LocalDate when = LocalDate.of(3021, 4, 17);
@@ -120,12 +151,17 @@ class FactionStandingUtilitiesTest {
         // (highest regard defaults to the minimum) and the at-war check (allMatch on an empty stream is vacuously
         // true) both flagged such systems as inaccessible.
         LocalDate when = LocalDate.of(3021, 4, 17);
+        Faction campaignFaction = mock(Faction.class);
+        FactionStandings factionStandings = mock(FactionStandings.class);
+        FactionHints factionHints = mock(FactionHints.class);
         PlanetarySystem targetSystem = mock(PlanetarySystem.class);
         when(targetSystem.getPopulation(when)).thenReturn(88_154L);
-        when(targetSystem.getFactionSet(when)).thenReturn(Collections.emptySet());
+        when(targetSystem.getFactionSet(when)).thenReturn(Set.of());
 
-        assertTrue(FactionStandingUtilities.canEnterTargetSystem(mock(Faction.class),
-              mock(FactionStandings.class), null, targetSystem, when, List.of(), mock(FactionHints.class)));
+        assertTrue(FactionStandingUtilities.canEnterTargetSystem(campaignFaction,
+              factionStandings, null, targetSystem, when, List.of(), factionHints));
+        assertTrue(FactionStandingUtilities.canEnterTargetSystem(campaignFaction,
+              factionStandings, null, 88_154L, Set.of(), when, Set.of(), Set.of(), factionHints));
     }
 
 }
